crates/carta/tests/snapshots/golden_e2e__ipynb__html__cell-metadata-scalars.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div id="tagged" class="cell code" data-execution_count="2"
data-code_folding="&quot;007&quot;" data-collapsed="&quot;true&quot;"
data-lines_to_next_cell="3" data-slideshow="open" data-trusted="true">
<pre class="python"><code>value = 1</code></pre>
</div>
