crates/carta/tests/snapshots/golden_e2e__ipynb__html__code-image-raw-fallback.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div id="broken-plot" class="cell code" data-execution_count="9">
<pre class="python"><code>draw()</code></pre>
<div class="output display_data">
<p><img src="05c9998ab9e54c4fb6cbbb6331ec7daf8f4c6f1c.png" /></p>
</div>
</div>
